# forge

./: .env.example  README.md  cli.py  config.py  main.py  pyproject.toml  requirements.txt  test_engine.py
agents/: registry.py
cli/: __init__.py  auth.py  interface.py
harness/: client.py  engine.py  queue.py
offline_agent/: success.txt
tests/: test_agent.py  test_client.py  test_config.py  test_tool.py
tools/: terminal.py
