[project]
name = "coding-agent"
version = "0.1.0"
description = "AI coding harness"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "inngest>=0.5.19",
    "openai>=2.45.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
