[project]
name = "coding-agent"
version = "0.1.0"
description = "AI coding harness"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "inngest>=0.5.19",
    "openai>=2.45.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "uvicorn>=0.51.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

# Point the entry point to the cli package's run_cli_session function
[project.scripts]
forge = "cli:run_cli_session"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatch will now auto-discover cli, agents, harness, and tools perfectly!
[tool.hatch.build.targets.wheel]
packages = ["cli", "agents", "harness", "tools"]